--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,3 +6,4 @@ spring:
         namespace: default
         sources:
          - name: binding-think-it-through
+         - name: event-streams-connecton-info
