--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Connection
 spring.kafka.jaas.enabled=true
 spring.kafka.jaas.login-module=org.apache.kafka.common.security.plain.PlainLoginModule
-spring.kafka.jaas.options.username=${user}
-spring.kafka.jaas.options.password=${password}
-spring.kafka.bootstrap-servers=${kafka_brokers_sasl}
+spring.kafka.jaas.options.username=${message_username}
+spring.kafka.jaas.options.password=${message_password}
+spring.kafka.bootstrap-servers=broker-3-kwdzwv91vs8y61jx.kafka.svc03.us-south.eventstreams.cloud.ibm.com:9093
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=PLAIN
 
@@ -13,3 +13,13 @@ spring.kafka.consumer.group-id=foo
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.datasource.url=${jdbcurl}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
+spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#^^^prevents a warning exception from being thrown. See: https://github.com/spring-projects/spring-boot/issues/12007
+spring.jpa.open-in-view=false
+#^^^suppresses warning exception related to OSIV https://vladmihalcea.com/the-open-session-in-view-anti-pattern/
